<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".rehabilitation.CognitiveHomeFragment">

    <TextView
        style="@style/TitleFormatting"
        android:text="@string/cognitive_training"/>

    <Button
        android:id="@+id/memory"
        style="@style/StandardFormatting"
        android:onClick="goToMemoryTraining"
        android:text="@string/memory" />

    <Button
        android:id="@+id/language"
        style="@style/StandardFormatting"
        android:onClick="goToLanguageTraining"
        android:text="@string/language" />

    <Button
        android:id="@+id/mental_aptitude"
        style="@style/StandardFormatting"
        android:onClick="goToMentalAptitudeTraining"
        android:layout_marginBottom="16dp"
        android:text="@string/mental_aptitude" />
</LinearLayout>