<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tests.Tests"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/StandardFormatting"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/test"/>

    <Button
        android:id="@+id/facial_droop_button"
        style="@style/StandardFormatting"
        android:layout_weight="3"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/facial_droop"
        android:onClick="goToFacialDroopTest"/>

    <Button
        android:id="@+id/arm_weakness_button"
        style="@style/StandardFormatting"
        android:layout_weight="3"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/arm_weakness"
        android:onClick="goToArmWeaknessTest"/>

    <Button
        android:id="@+id/eeg_test_button"
        style="@style/StandardFormatting"
        android:layout_weight="3"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/eeg"
        android:onClick="goToEEGTest"/>
</LinearLayout>