<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".rehabilitation.CognitiveMentalAptitudeFragment"
    tools:ignore="NestedWeights, InefficientWeight">

    <TextView
        style="@style/TitleFormatting"
        android:text="@string/mental_aptitude" />

    <TextView
        android:id="@+id/question"
        style="@style/StandardFormatting"
        android:layout_weight="0"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/answer"
        style="@style/StandardFormatting"
        android:layout_weight="0"
        android:layout_height="wrap_content"
        android:hint="@string/answer_prompt"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:inputType="number"
        tools:ignore="Autofill" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.cardview.widget.CardView
        style="@style/StandardFormatting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:elevation="15sp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>