<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".rehabilitation.CognitiveLanguageVisionFragment"
    tools:ignore="NestedWeights, InefficientWeight, ContentDescription" >

    <TextView
        style="@style/TitleFormatting"
        android:text="@string/mental_aptitude" />

    <TextView
        android:id="@+id/question"
        style="@style/StandardFormatting"
        android:layout_weight="0"
        android:layout_height="wrap_content"/>

    <LinearLayout
        style="@style/StandardFormatting"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/option_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"/>

        <ImageButton
            android:id="@+id/option_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        style="@style/StandardFormatting"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/option_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/option_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        style="@style/StandardFormatting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:elevation="15sp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>